src/tests/TodoList/errors/TheListAlreadyExists.ts
import { CustomError } from '../../../lib'

export default CustomError<'TheListAlreadyExists'>({
  name: 'TheListAlreadyExists',
})
